--- a/event_docs.md.j2
+++ b/event_docs.md.j2
@@ -5,7 +5,7 @@
 
 # {{ type }} ({{ abbrev }})
 {%- if version.startswith('0.') %}
-> :warning: This event type is currently at version {{ version }} and is therefore experimental. Until it has reached version 1.0.0 it may undergo any number of backwards incomptaible changes. It might also be deprecated and never reach 1.0.0.
+> :warning: This event type is currently at version {{ version }} and is therefore experimental. Until it has reached version 1.0.0 it may undergo any number of backwards incompatible changes. It might also be deprecated and never reach 1.0.0.
 {%- endif %}
 
 {{ description }}
