Add linting for markdown files (#304)

--- a/event_docs.md.j2
+++ b/event_docs.md.j2
@@ -60,7 +60,9 @@ __Description:__ {{ field_data.description }}
 | {{ item.version }} | Not yet released in an edition | {{ item.changes }} |
 {% endif -%}
 {% endfor %}
+{#- Putting a "-" after the for loop will kill all whitespaces afterwards -#}
 
+{#- "-" in Jinja removes all whitespace thus this ugly hack #}
 ## Examples
 
 {% for ex in examples -%}
